# labelImg_refresh

./: .gitignore  README.MD  labelImg.py  pyproject.toml  rebuild_resources.sh  resources.qrc
.github/workflows/: package.yml
libs/: __init__.py  auto_annotate.py  canvas.py  colorDialog.py  combobox.py  constants.py  create_ml_io.py  default_label_combobox.py  hashableQListWidgetItem.py  labelDialog.py  labelFile.py  pascal_voc_io.py  resources.py  settings.py  shape.py  stringBundle.py  structs.py  ustr.py  utils.py  yolo_io.py  zoomWidget.py
resources/strings/: strings-ru-RU.properties  strings.properties
tools/: README.md  Yolo_renamer_for_image_and_labels.py
