[project]
name = "labelImg_refresh"
version = "1.9.3"
description = "Modernized LabelImg with YOLO auto-annotation"
authors = [{name = "SLY-F0X"}]
requires-python = ">=3.10"

dependencies = [
    "pyqt5~=5.15.11",
    "lxml~=6.0.0",
    "torch~=2.8.0",
    "ultralytics~=8.3.176",
    "pandas~=2.3.1",
]




